# rinha-23

./: Cargo.toml  README.md  db.sql  docker-compose.yml  docker_compose.yml  dockerfile  nginx.conf
rinhabackendsimulation-20230822020234587/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822025226585/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822041533654/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822042423254/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822045348705/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822052640871/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822053907179/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822061427435/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822061459174/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822062344920/: index.html  req_busca-inva-lida-b5618.html  (+2 more)
src/: data.rs  (+4 more)
(+158 files in other folders)
