[package]
name = "api-rinha"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.11.3", features = ["future"] }
mobc-postgres = {version = "0.8.0", features = ["with-uuid-0_8"]}
mobc = "0.8.1"
warp = "0.3.5"
tokio = {version = "1.32.0", features = ["full"]}

[dependencies.uuid]
version = "0.8"
features = [
    "v4",                
    "v5",               
]


[profile.dev]
debug = 0

